Downgrade to Java 14